# pantheon-tweaks

./: .editorconfig  .gitignore  .valalintignore  0001-lib-Include-stylesheet-in-the-library.patch  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  README  README.md  RELEASE_HOWTO.md  Tweaks.diff  com.github.pantheon-tweaks.pantheon-tweaks.yml  com.github.pantheon_tweaks.pantheon-tweaks.yml  config.vala.cmake  config.vala.in  hen  io.github.pantheon_tweaks.pantheon-tweaks.yml  meson.build  meson_options.txt  plug.plug  project.hen  start-pantheon-tweaks.sh  tweaks.geany
.github/workflows/: flatpak-x-checker.yml  gettext.yml  main.yml
build-aux/: fix-null-access-on-selection-cleared.patch  io.github.pantheon_tweaks.pantheon-tweaks.yml  start-pantheon-tweaks.sh
cmake/: Translations.cmake  ValaPrecompile.cmake
data/: 99theme-patcher.cmake  elementary-tweaks.desktop  gala-workspace.dockitem  meson.build  natural-scrolling.desktop  natural_scrolling.sh  org.pantheon.elementary-tweaks.egtk.policy.cmake  pantheon-tweaks.appdata.xml.in  pantheon-tweaks.desktop.in  pantheon-tweaks.gschema.xml  pantheon-tweaks.metainfo.xml.in  pantheon-tweaks.metainfo.xml.in.in  show-desktop.dockitem
data/styles/: CategoryView.scss  Index.scss  SettingsPage.scss  SettingsSidebar.scss  _common.scss  meson.build  styles.gresource.xml
debian/: changelog  control  copyright  postinst  rules
icon/: meson.build
meson/: post_install.py
po/: CMakeLists.txt  LINGUAS  POTFILES  bg.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  elementary-tweaks-plug.pot  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  meson.build  ms.po  my.po  nb.po  nl.po  pantheon-tweaks-plug.pot  pantheon-tweaks.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+15 more)
schemas/: CMakeLists.txt  org.pantheon.elementary-tweaks.gschema.xml
src/: AnimationsGrid.vala  AppearanceGrid.vala  CMakeLists.txt  Config.vala.in  DockGrid.vala  FontsGrid.vala  GalaSettings.vala  LLabel.vala  MainWindow.vala  MiscGrid.vala  PaneName.vala  PantheonAccountsServicePlugin.vala  PlankSettings.vala  ShadowsGrid.vala  SlingshotSettings.vala  Tweaks.vala  Util.vala  meson.build  tweaks-plug.vala
src/Grids/: AnimationsGrid.vala  AppearanceGrid.vala  CerbereGrid.vala  DockGrid.vala  EgtkThemeGrid.vala  FilesGrid.vala  FontsGrid.vala  MiscGrid.vala  PlankGrid.vala  ShadowsGrid.vala  ShortcutsGrid.vala  SlingshotGrid.vala  SuperwingpanelGrid.vala  SynapseGrid.vala  TerminalGrid.vala  WingpanelslimGrid.vala
src/Model/: ListItemModel.vala  StringIdListItem.vala  StringIdObject.vala
src/Objects/: ShortcutObject.vala  ThemePatchingOperation.vala
src/Panes/: AnimationsPane.vala  AppearancePane.vala  AudiencePane.vala  CerberePane.vala  FilesPane.vala  FontsPane.vala  KeyboardPane.vala  MiscPane.vala  PlankPane.vala  SlingshotPane.vala  TerminalPane.vala  VideosPane.vala
src/Settings/: AccountsService.vala  AudienceSettings.vala  CerbereSettings.vala  EgtkThemeSettings.vala  FilesSettings.vala  GalaSettings.vala  GnomeSettings.vala  GtkSettings.vala  IndicatorSoundSettings.vala  KeyboardSettings.vala  PlankSettings.vala  SlingshotSettings.vala  SuperwingpanelSettings.vala  SynapseSettings.vala  TerminalSettings.vala  ThemeSettings.vala  WingpanelslimSettings.vala  XSettings.vala
src/TweakTemplates/: ComboBoxTweak.vala  FontTweak.vala  SpinButtonTweak.vala  SwitchTweak.vala
src/Util/: DropDownUtil.vala  ListUtil.vala  SchemaUtil.vala  SettingsUtil.vala  StringIdListUtil.vala  StringListUtil.vala
src/Widgets/: AcceleratorInputWidget.vala  BasePane.vala  Categories.vala  ColorComboboxTweakWidget.vala  Dialog.vala  DropDownId.vala  DropDownRow.vala  LLabel.vala  Label.vala  LockButtonTweakWidget.vala  OpenButton.vala  SettingBox.vala  TweakWidget.vala
theme-patcher/: CMakeLists.txt  EgtkThemePatcher.vala  ThemePatcher.vala
vapi/: polkit-gobject-1.vapi
