install_data(
    'preferences-tweaks-anim.svg',
    'preferences-tweaks-shadows.svg',
    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', '24x24', 'categories')
)

install_data(
    'preferences-desktop-tweaks.svg',
    'preferences-tweaks-cerbere.svg',
    'preferences-tweaks-slingshot.svg',
    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', '32x32', 'categories')
)
